# cpp-template

./: .clang-format  .clangd  CMakeLists.txt  NOTICE  README.md
include/: example-header.h
src/: CMakeLists.txt  example-header.cc  main.cc
tests/: CMakeLists.txt  sample.cc
